--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>kontol odon</p>
-    <hr>
-    <p>kudaki</p>
+<a href="kuda.html"><p>akudisisni</p></a>
 </body>
 </html>
