--- a/kuda.html
+++ b/kuda.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Perkenalan Diri</h2>
     <p>disini ada aku world</p>
+    <br>
+    <p>Nama saya :</p>
 </body>
 </html>
